# SyntheticRecordGenerator

./: .gitignore  README.md  appeal_record_a_failed_conservative_care.json  ed_downgrade_records.json  entry-points.json  generate_appeal_lumbar_mri_records.py  generate_ed_downgrade_records.py  generate_long_form_packets.py  generate_payer_synthetic_records.py  generate_provider_synthetic_records.py  generate_referral_packets.py  generate_synthetic_patient_pdf.py  generate_um_request_packets.py  input.example.json  main.py  provider_record_b_high_acuity_revenue_impact.json  pyproject.toml  uipath.json
docs/: component-inventory.md  uipath-cloud.md
